--- a/htmlFiles/template.html
+++ b/htmlFiles/template.html
@@ -21,7 +21,7 @@
 	
 	for testing go to cmd line (windows, run cmd line as admin)
 	Windows: "C:\Path\To\Your\chrome.exe" --user-data-dir="C:/Chrome dev session" --disable-web-security
-	Linux: google-chrome --disable-web-security
+	Linux: google-chrome --disable-web-security --usr-data-dir="[enter any name]"
 	
 	DONT use this new chrome for browsing, theres no web security
 -->
